# OpenGLExecrise

./: CMakeLists.txt  main.cpp
Component/: Camera.cpp  Camera.h  Material.cpp  Material.h  Shader.cpp  Shader.h
ShaderData/: FragmentTest.glsl  VertexTest.glsl
include/: glad.c  glad.h
